data/derived/sp14/progs/unify/prog2362.ml.out
Characters 10-14:
  let _ = t "hi";;
            ^^^^
Error: This expression has type string but an expression was expected of type
         int
